Final Sci2 build using p2 repo